--- a/resources/css/style-services.css
+++ b/resources/css/style-services.css
@@ -31,6 +31,12 @@ p{
     font-weight: 300;
 }
 
+
+h1:hover,h2:hover,h3:hover,h4:hover,p:hover,
+h1:active,h2:active,h3:active,h4:active,p:active{
+    cursor: default;
+}
+
 /*----------------------------------*/
 /*  REUSABLE COMPONENTS */
 /*----------------------------------*/
