--- a/resources/css/style-services.css
+++ b/resources/css/style-services.css
@@ -664,6 +664,7 @@ input[type=submit]:active,
 
 input[type=text],
 input[type=email],
+input[type=phone],
 select{
     width: 100%;
     padding: 7px;
