--- a/resources/css/style-offers.css
+++ b/resources/css/style-offers.css
@@ -464,7 +464,16 @@ hr{
 }
 
 .row-offer:nth-of-type(2){
-    margin-top: 0;
+    margin-top: 30px;
+}
+
+.section-offers h4{
+    font-size: 150%;
+    text-align: center;
+    font-weight: 400;
+    letter-spacing: 1.2px;
+    color:#1b9cfc;
+    text-transform:uppercase;
 }
 
 .offer i{
@@ -483,13 +492,13 @@ hr{
 
 .offer-text{
     position: relative;
-    margin-top: 0;
+    margin: 0 auto;
     text-align: center;
 }
 
 .offer-text h4{
-    position: absolute;
     top: 0;
+    margin: 7.5px 0;
     text-align: center;
     width: 100%;
 }
@@ -557,6 +566,7 @@ hr{
 
 input[type=text],
 input[type=email],
+input[type=phone],
 select{
     width: 100%;
     padding: 7px;
