--- a/resources/css/queries-offers.css
+++ b/resources/css/queries-offers.css
@@ -22,7 +22,7 @@
     /*      OFFERS      */
     
     .offer{
-        width:50%;
+        width:100%;
     }
 }
 
@@ -51,7 +51,7 @@
     }
     
     .offer{
-        width:50%;
+        width:100%;
     }
     
     
@@ -85,6 +85,10 @@
     }
     .col{
         width: 99%;
+        margin-top: 20px;
+    }
+    .row-offer{
+        margin-top: 0;
     }
     .logo{
         margin-top: 20px;
@@ -104,9 +108,12 @@
     /*      OFFERS      */
     
     .offer{
-        width:50%;
+        width:70%;
+        margin-left:15%;
     }
-    
+    .row-offer:nth-of-type(2){
+        margin-top: -40px;
+    }
     
     /*      CONTACT      */
     
@@ -188,7 +195,21 @@
     .main-nav{
         display: none;
     }
-    
+    .col{
+        width: 99%;
+        margin-top: 20px;
+    }
+    .row-offer:nth-of-type(2){
+        margin-top: -40px;
+    }
+    .row-offer{
+        margin-top: 0;
+    }
+    .offer-desc{
+        border-top: 3px #90cffe double;
+        border-right: 3px #90cffe double;
+        border-left: 3px #90cffe double;
+    }
     .mobile-nav-icon{
         display: inline-block;
     }
@@ -238,13 +259,17 @@
         width: 75%;
         margin-left: 15%;
         padding: 10px 10px;
-        border-top: 3px #90cffe double;
-        border-right: 3px #90cffe double;
+    }
+    
+    .offer-text{
+        position: relative;
+        margin: 0 0;
+        text-align: center;
     }
     
     .offer-text h4{
-        font-size: 135%;
-        margin-left: 2%;
+        font-size: 150%;
+        margin-left: 0;
         padding: 10px 5px;
     }
     
